sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:4: error: not found: value getNombreValeur
    for (j<- 0 to getNombreValeur()-2-i){
                  ^